# jlop

./: README.md  README.rst  pyproject.toml
.github/workflows/: python-publish.yml  python-publish_deprecated.yml
example_scripts/: 00_install_jlop_themes.py  01_simple_plot.py  02_cross_template.py
src/jlop/: __init__.py  colors.py  install_routine.py  load_style.py
src/jlop/styles/: classic.mplstyle  default.mplstyle  jlop.mplstyle  retro.mplstyle
