[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jlop"
version = "0.0.1"
description = ""
authors = ["dribeiro"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = ">=1.20"
matplotlib = ">=3.7"

[tool.poetry.package]
include = ["src/**"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]
